--- a/app/index.html
+++ b/app/index.html
@@ -89,10 +89,10 @@
 
         <div class="form">
           <div class="row">
-            <input id="newAppName" placeholder="Nome (ex: Meu App)" />
+            <input id="newAppName" placeholder="Nome (ex: MeuApp)" />
           </div>
           <div class="row">
-            <input id="newAppSlug" placeholder="Slug (ex: meu-app)" />
+            <input id="newAppSlug" placeholder="Slug (ex: meuapp)" />
           </div>
           <div class="row">
             <button class="btn primary" id="btnDoCreateApp" type="button">Criar</button>
@@ -218,8 +218,7 @@
           <button class="btn danger" id="btnLogsClear" type="button">Limpar</button>
         </div>
 
-        <!-- IMPORTANTE: ID alinhado com o ui_bindings.js novo -->
-        <pre class="mono" id="logsViewBox">Logs...</pre>
+        <pre class="mono" id="logsOut">Logs...</pre>
       </div>
     </section>
 
